# texture-connector

./: README.md  pyproject.toml
tests/gui/: color_space_widget.py  material_settings_list_widget.py  material_settings_widget.py  material_texture_map_settings_widget.py  preferences_ui.py  settings_widget.py  texture_connector_settings_widget.py  texture_connector_ui.py  texture_map_settings_widget.py
texture_connector/: __init__.py
texture_connector/config/: __init__.py  color_spaces.py  image_extensions.py  render_plugins.py  texture_maps.py  uv_tiling_modes.py
texture_connector/core/: __init__.py  create_material_network.py  create_material_network_arnold.py  create_material_network_redshift.py  create_network_network_v_ray.py
texture_connector/gui/: __init__.py  color_space_widget.py  material_settings_list_widget.py  material_settings_widget.py  material_texture_map_settings_widget.py  preferences_ui.py  settings_widget.py  texture_connector_settings_widget.py  texture_connector_ui.py  texture_map_settings_widget.py
texture_connector/utils/: __init__.py  logger.py  utils.py
